tests/sources/invalid/arrays/array_access_undefined_index_errors.fire
// Array access where the index expression itself is undefined: only the
// "undefined variable" diagnostic should fire once (the array-access type
// check bails out silently on a None operand type instead of piling on a
// second, misleading "cannot index" error).
arr: int32[3] = [1, 2, 3];
v: int32 = arr[undefined_var];  //~ ERROR FS-PARSE-0003 @16
